<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swapnil.googlemaps.satelliteweather">
   <LinearLayout

       android:orientation="vertical"

       android:background="@drawable/un1"

       android:weightSum="10"

       android:layout_width="match_parent"

       android:layout_height="match_parent">



      <RelativeLayout

          android:layout_weight="2"

          android:layout_width="match_parent"

          android:layout_height="0dp">



         <TextView
             android:id="@+id/textGrid"
             android:text="@string/heading"
             android:textSize="34sp"
             android:textStyle="bold"
             android:textColorHint="@android:color/black"
             android:textColor="@android:color/white"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
      </RelativeLayout>



      <GridLayout

          android:id="@+id/mainGrid"

          android:columnCount="2"

          android:rowCount="3"

          android:alignmentMode="alignMargins"

          android:columnOrderPreserved="false"

          android:layout_weight="8"

          android:layout_width="match_parent"

          android:layout_height="0dp"

          android:padding="14dp"

          >



         <!-- Row 1 -->



         <!-- Column 1 -->

         <android.support.v7.widget.CardView

             android:id="@+id/c1"

             android:layout_width="0dp"

             android:layout_height="0dp"

             android:layout_columnWeight="1"

             android:layout_marginBottom="16dp"

             android:layout_marginLeft="16dp"

             android:layout_marginRight="16dp"

             android:layout_rowWeight="1"

             app:cardCornerRadius="8dp"

             app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_margin="16dp"

                android:orientation="vertical">


               <ImageView

                   android:layout_width="wrap_content"

                   android:layout_height="60dp"

                   android:layout_gravity="center_horizontal"

                   android:src="@drawable/download" />


               <TextView

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingLeft="20dp"

                   android:text="@string/Weather"

                   android:textAlignment="gravity"

                   android:textColor="@android:color/black"

                   android:textSize="18sp"

                   android:textStyle="bold" />


            </LinearLayout>


         </android.support.v7.widget.CardView>



         <!-- Column 2 -->

         <android.support.v7.widget.CardView

             android:id="@+id/c2"

             android:layout_width="0dp"

             android:layout_height="0dp"

             android:layout_columnWeight="1"

             android:layout_marginBottom="16dp"

             android:layout_marginLeft="16dp"

             android:layout_marginRight="16dp"

             android:layout_rowWeight="1"

             app:cardCornerRadius="8dp"

             app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_margin="16dp"

                android:orientation="vertical">


               <ImageView

                   android:layout_width="wrap_content"

                   android:layout_height="55dp"

                   android:layout_gravity="center_horizontal"

                   android:src="@drawable/govtprograme" />


               <TextView

                   android:layout_width="wrap_content"

                   android:layout_height="wrap_content"

                   android:text="@string/govt_pro"

                   android:textAlignment="center"

                   android:textColor="@android:color/black"

                   android:textSize="14sp"

                   android:textStyle="bold" />


            </LinearLayout>


         </android.support.v7.widget.CardView>





         <!-- Row 2 -->



         <!-- Column 1 -->

         <android.support.v7.widget.CardView

             android:id="@+id/c3"

             android:layout_width="0dp"

             android:layout_height="0dp"

             android:layout_columnWeight="1"

             android:layout_marginBottom="16dp"

             android:layout_marginLeft="16dp"

             android:layout_marginRight="16dp"

             android:layout_rowWeight="1"

             app:cardCornerRadius="8dp"

             app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_margin="16dp"

                android:orientation="vertical">


               <ImageView

                   android:layout_width="wrap_content"

                   android:layout_height="60dp"

                   android:layout_gravity="center_horizontal"

                   android:src="@drawable/download5" />


               <TextView

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingLeft="15dp"

                   android:text="@string/Yard_price"

                   android:textAlignment="center"

                   android:textColor="@android:color/black"

                   android:textSize="18sp"

                   android:textStyle="bold" />


            </LinearLayout>


         </android.support.v7.widget.CardView>



         <!-- Column 2 -->

         <android.support.v7.widget.CardView

             android:id="@+id/c4"

             android:layout_width="0dp"

             android:layout_height="0dp"

             android:layout_columnWeight="1"

             android:layout_marginBottom="16dp"

             android:layout_marginLeft="16dp"

             android:layout_marginRight="16dp"

             android:layout_rowWeight="1"

             app:cardCornerRadius="8dp"

             app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_margin="16dp"

                android:orientation="vertical">


               <ImageView

                   android:layout_width="wrap_content"

                   android:layout_height="55dp"

                   android:layout_gravity="center_horizontal"

                   android:src="@drawable/govtgrant" />


               <TextView

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingLeft="5dp"

                   android:text="@string/govt_grands"

                   android:textAlignment="center"

                   android:textColor="@android:color/black"

                   android:textSize="18sp"

                   android:textStyle="bold" />


            </LinearLayout>


         </android.support.v7.widget.CardView>





         <!-- Row 2 -->



         <!-- Column 1 -->

         <android.support.v7.widget.CardView

             android:id="@+id/c5"

             android:layout_width="0dp"

             android:layout_height="0dp"

             android:layout_columnWeight="1"

             android:layout_marginBottom="16dp"

             android:layout_marginLeft="16dp"

             android:layout_marginRight="16dp"

             android:layout_rowWeight="1"

             app:cardCornerRadius="8dp"

             app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_margin="16dp"

                android:orientation="vertical">


               <ImageView

                   android:layout_width="136dp"

                   android:layout_height="55dp"

                   android:layout_gravity="center_horizontal"

                   android:src="@drawable/download3" />


               <TextView

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingLeft="15dp"

                   android:text="@string/elec"

                   android:textAlignment="center"

                   android:textColor="@android:color/black"

                   android:textSize="18sp"

                   android:textStyle="bold" />


            </LinearLayout>


         </android.support.v7.widget.CardView>



         <!-- Column 2 -->

         <android.support.v7.widget.CardView

             android:id="@+id/c6"

             android:layout_width="0dp"

             android:layout_height="0dp"

             android:layout_columnWeight="1"

             android:layout_marginBottom="16dp"

             android:layout_marginLeft="16dp"

             android:layout_marginRight="16dp"

             android:layout_rowWeight="1"

             app:cardCornerRadius="8dp"

             app:cardElevation="8dp">


            <LinearLayout

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_margin="16dp"

                android:orientation="vertical">


               <ImageView

                   android:layout_width="wrap_content"

                   android:layout_height="55dp"

                   android:layout_gravity="center_horizontal"

                   android:src="@drawable/download1" />


               <TextView

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:paddingLeft="15dp"

                   android:text="@string/govt_site"

                   android:textAlignment="center"

                   android:textColor="@android:color/black"

                   android:textSize="18sp"

                   android:textStyle="bold" />

            </LinearLayout>

         </android.support.v7.widget.CardView>

      </GridLayout>

   </LinearLayout>



</RelativeLayout>